<resources>
    <string name="app_name">Lunch</string>
    <string name="title_activity_settings">LunchMenu</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tap_to_show_all_apps">Tap to show all apps.</string>
    <string name="pref_header_customization">Customization</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_title_launcher_background">Launcher Background</string>
    <string name="pref_description_launcher_background">Background color of the \"all apps\" view.</string>
    <string name="pref_title_launcher_text_color">Launcher Text Color</string>
    <string name="pref_description_launcher_text_color">Text color of the application names.</string>
    <string name="settings">Settings</string>
    <string name="change_background">Change Background</string>
    <string name="okay">Okay</string>
    <string name="pref_title_show_all_apps">Show All Apps</string>
    <string name="pref_description_show_all_apps">If true, Applications with no default launch Intent are visible.</string>
    <string name="pref_title_black_apps_icon">Use Black Apps Icon</string>
    <string name="pref_description_black_apps_icon">If selected, the \"all apps\" button will be black instead of white.</string>
    <string name="pref_title_change_wallpaper">Change Wallpaper</string>
    <string name="pref_description_change_wallpaper">Opens Android\'s wallpaper change dialog.</string>
    <string name="cancel">Cancel</string>
    <string name="pref_title_app_icon_type">App icon type</string>
    <string name="pref_description_app_icon_type">Determines which icon is shown on the main view.</string>
    <string name="pref_title_swipe_instead_of_press">Use swipe instead of press for launcher</string>
    <string name="pref_description_swipe_instead_of_press">If true, the app view will show on swipe up inside the home screen instead of pressing the button.</string>
    <string name="uninstall">Uninstall</string>
    <string name="show_app_info">App info</string>
    <string name="swipe_down_hint">Swipe Down Hint</string>
    <string name="loading_applications">Loading Applications…</string>
    <string name="choose_wallpaper">Choose Wallpaper</string>
    <string name="app_icon">App Icon</string>
    <string name="app_title">Application Title</string>

    <string-array name="pref_app_icon_type_titles">
        <item>Widgets</item>
        <item>Applications</item>
        <item>Chevron Up</item>
    </string-array>
    <string-array name="pref_app_icon_type_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>
</resources>
