<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="sh.lrk.lunch.app.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="sh.lrk.lunch.app.settings.SettingsActivity$CustomizationPreferenceFragment"
        android:icon="@drawable/ic_color_lens_white_24dp"
        android:title="@string/pref_header_customization" />

    <header
        android:fragment="sh.lrk.lunch.app.settings.SettingsActivity$AdvancedPreferenceFragment"
        android:icon="@drawable/ic_bug_report_white_24dp"
        android:title="@string/pref_header_advanced" />

</preference-headers>
